tests/e2e/null_index.error
Error: syntax error in story at line 2, column 5

2|    b = a[0]
          ^^^

E0104: `null` can't be indexed with `0` of type `int`
