tests/e2e/null_index.story
a = null
b = a[0]
